8257901: ZGC: Take virtual memory usage into account when sizing heap