src/hotspot/share/gc/z/zArguments.cpp
@@ -25,6 +25,7 @@
 #include "gc/z/zAddressSpaceLimit.hpp"
 #include "gc/z/zArguments.hpp"
 #include "gc/z/zCollectedHeap.hpp"
+#include "gc/z/zGlobals.hpp"
 #include "gc/z/zHeuristics.hpp"
 #include "gc/shared/gcArguments.hpp"
 #include "runtime/globals.hpp"
@@ -92,6 +93,13 @@ void ZArguments::initialize() {
     FLAG_SET_DEFAULT(ZVerifyRoots, true);
     FLAG_SET_DEFAULT(ZVerifyObjects, true);
   }
+}
+
+size_t ZArguments::max_virtual_memory_fraction() {
+  // Used by heap size heuristics to determine max amount of address
+  // space to use. Inflates the default MaxVirtMemFraction to account
+  // for all heap views and the virtual-to-physical ratio.
+  return MaxVirtMemFraction * ZHeapViews * ZVirtualToPhysicalRatio;
 }
 
 size_t ZArguments::conservative_max_heap_alignment() {
