src/hotspot/share/gc/z/zArguments.hpp
@@ -34,6 +34,7 @@ private:
 
   virtual void initialize();
   virtual size_t conservative_max_heap_alignment();
+  virtual size_t max_virtual_memory_fraction();
   virtual CollectedHeap* create_heap();
 
   virtual bool is_supported() const;
